# fastapiDBTProject

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yaml  pre_start.py  prestart.sh  pyproject.toml  run_bot.py
.gigaide/: gigaide.properties
app/: main.py
app/diary_ms/: main.py
app/diary_ms/adapters/db/: session.py
app/diary_ms/adapters/gateways/: base.py  diary_card.py
app/diary_ms/adapters/models/: base.py  diary_card.py
app/diary_ms/api/: deps.py
app/diary_ms/api/v1/routes/: diary_card.py
app/diary_ms/application/dto/: base.py  diary_card.py
app/diary_ms/application/interactors/: base.py
app/diary_ms/application/interactors/diary_card/: create_dc.py  get_dc.py
app/diary_ms/application/interfaces/: gateway.py  id_provider.py  uow.py
app/diary_ms/core/: ioc.py  server.py
app/diary_ms/domain/models/: base.py  diary_card.py  id.py  user.py
docker/: .dockerignore  diary-ms.Dockerfile  diary-ms.docker-compose.yaml  diary-tg.Dockerfile  diary_card.Dockerfile  diary_card.docker-compose.yaml  docker-compose.yaml  user-ms.Dockerfile  user-ms.docker-compose.yaml  user-ms.sh  user.docker-compose.yaml
docker/api-gateway/: api-gateway.Dockerfile  api-gateway.docker-compose.yaml  api-gateway.env
docker/api-gateway/nginx/: nginx.conf  oauth2.js
docker/logs/: logs.docker-compose.yaml  loki-config.yaml
docker/logs/.data/minio/.minio.sys/: format.json
docker/monitoring/: .dockerignore  monitoring.docker-compose.yaml
docker/monitoring/alloy/: alloy-config.yaml
docker/monitoring/grafana/dashboards/: fastapi-observability.json
docker/monitoring/grafana/provisioning/dashboards/: dashboards.yaml
docker/monitoring/grafana/provisioning/datasources/: datasource.yaml  ds.yaml
docker/monitoring/loki/: loki-config.yaml
docker/monitoring/prometheus/: prometheus.yaml  prometheus.yml
docker/monitoring/tempo/: tempo.yaml
docker/monitoring/tempo-data/blocks/: tempo_cluster_seed.json
migrations/: env.py
migrations/versions/: 2024_11_13_2141-6fe40b278e41_.py  2024_11_15_1021-ae937f1d2d7e_.py  2024_11_23_2207-7414e8f9bc4c_.py  2024_11_24_1249-265617a70993_.py  2024_11_27_1427-5712dfc6ab07_.py  2024_11_27_1454-b3bdf0ce1b72_.py
src/: main.py
src/diary_ms/: main.py
src/diary_ms/application/: dispatcher.py  mediator.py
src/diary_ms/application/admin/: __init__.py
src/diary_ms/application/common/: dispatcher.py
src/diary_ms/application/common/dto/: base.py  command.py  pagination.py  query.py
src/diary_ms/application/common/exceptions/: base.py  diary_card.py
src/diary_ms/application/common/interfaces/: broker  diary_card.py  file_manager.py  gateway.py  id_provider.py  interactor.py  task_sender.py
src/diary_ms/application/diary_card/dto/: data_for_diary_card.py  diary_card.py  diary_cards_report.py  emotion.py  for_update_diary_card.py  skill.py
src/diary_ms/application/diary_card/exceptions/: diary_card.py  skill.py
src/diary_ms/application/diary_card/interfaces/: gateway.py  mapper.py  report_generator.py
src/diary_ms/application/dto/: base.py  diary_card.py  for_update_diary_card.py
src/diary_ms/application/interactors/commands/: create_dc.py  create_diary_card.py  delete_diary_card.py  update_diary_card.py
src/diary_ms/application/interactors/events/: diary_card_created.py
src/diary_ms/application/interfaces/: gateway.py  id_provider.py  uow.py
src/diary_ms/domain/services/: target_admin.py
src/diary_ms/infrastructure/: error_code.py
src/diary_ms/infrastructure/auth/: tg.py  token.py
src/diary_ms/infrastructure/brokers/: broker.py  interface.py  kafka.py  message_broker.py
src/diary_ms/infrastructure/db/: session.py
src/diary_ms/infrastructure/gateways/: base.py  diary_card.py
src/diary_ms/infrastructure/log/: config.py  main.py
src/diary_ms/infrastructure/mediator/: base.py
src/diary_ms/infrastructure/s3/: file_manager.py
src/diary_ms/infrastructure/services/: api_client.py
src/diary_ms/infrastructure/tasks/: diary_cards.py
src/diary_ms/infrastructure/telemetry/: config.py  main.py  utils.py
src/diary_ms/main/: amqp.py  bot.py  config.py  ioc.py  scheduler.py  web.py
src/diary_ms/presentation/: error_message.py
src/diary_ms/presentation/amqp/: deps.py
src/diary_ms/presentation/api/: deps.py  exceptions.py  http_error_code.py
src/user_ms/main/: settings.py  urls.py
src/user_ms/users/: models.py  serializers.py  urls.py
src/user_ms/users/migrations/: 0001_initial.py
(+336 files in other folders)
