[tool.poetry]
name = "fastapidbtproject"
version = "0.1.0"
description = "DBT Skills diary cards service."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
fastapi-cli = "^0.0.5"
httpx = "^0.27.2"
pydantic-settings = "^2.6.0"
dishka = "^1.4.0"
fastapi-versioning = "^0.10.0"
psycopg-binary = "^3.2.3"
psycopg = "^3.2.3"
python-jose = "^3.3.0"



[tool.poetry.group.diary.dependencies]
sqlmodel = "^0.0.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
