[tool.poetry]
name = "fastapidbtproject"
version = "0.1.0"
description = "DBT Skills diary cards service."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.3"
fastapi-cli = "^0.0.5"
httpx = "^0.27.2"
pydantic-settings = "^2.6.0"
dishka = "^1.4.0"
fastapi-versioning = "^0.10.0"
psycopg-binary = "^3.2.3"
python-jose = "^3.3.0"
alembic = "^1.14.0"
greenlet = "^3.1.1"
asyncpg = "^0.30.0"
faststream = {extras = ["kafka"], version = "^0.5.30"}



[tool.poetry.group.diary.dependencies]
sqlmodel = "^0.0.22"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"
mypy = "^1.13.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "migrations"]

[tool.ruff]
target-version = "py313"
exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
